crates/cribo/tests/snapshots/execution_results@xfail_three_module_cycle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_three_module_cycle/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: C(using_value_from_A)->B->A",
    stderr: "",
}
