crates/cribo/tests/snapshots/requirements@all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/all_variable_handling/main.py
---
packages: []
count: 0
