crates/cribo/tests/snapshots/requirements@ast_rewriting_variable_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_variable_name_collision/main.py
---
packages: []
count: 0
