crates/cribo/tests/snapshots/requirements@comprehensive_ast_rewrite.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/comprehensive_ast_rewrite/main.py
---
packages: []
count: 0
